--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Qi Zhang <singularitti@outlook.com>"]
 version = "0.1.0"
 
 [deps]
+FilePathsBase = "48062228-2e41-5def-b9a4-89aafe57970f"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
