--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 Configurations = "0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 0.11, 0.12, 0.13, 0.14, 0.15"
 IsURL = "0.2"
 JSON = "0.20, 0.21"
+TOML = "1"
 YAML = "0.3, 0.4"
 julia = "1"
 
