--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 show_downloads: true
 github:
-  zip_url: {{ site.github.repository_url }}/archive/refs/tags/v0.2.0.zip
-  tar_url: {{ site.github.repository_url }}/archive/refs/tags/v0.2.0.zip
+  zip_url: https://github.com/MineralsCloud/AbInitioSoftwareBase.jl/archive/refs/tags/v0.2.0.zip
+  tar_url: https://github.com/MineralsCloud/AbInitioSoftwareBase.jl/archive/refs/tags/v0.2.0.tar.gz
