--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.3.0"
 Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
 IsURL = "ceb4388c-583f-448d-bb30-00b11e8c5682"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+MPICH_jll = "7cb0a576-ebde-5e09-9194-50597f1243b4"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
