--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ JSON = "0.20, 0.21"
 julia = "1"
 Compat = "3.16"
 YAML = "0.3, 0.4"
-Configurations = "0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 0.11, 0.12, 0.13, 0.14, 0.15, 0.16"
+Configurations = "0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.10, 0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17"
 TOML = "1"
 IsURL = "0.2"
 
