--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,8 +7,9 @@ task:
   env:
     matrix:
       - JULIA_VERSION: 1.0
-      - JULIA_VERSION: 1.2
+      - JULIA_VERSION: 1.3
       - JULIA_VERSION: 1.5
+      - JULIA_VERSION: 1.6
       - JULIA_VERSION: nightly
   allow_failures: $JULIA_VERSION == 'nightly'
   install_script:
@@ -18,4 +19,4 @@ task:
   test_script:
     - cirrusjl test
   coverage_script:
-    - cirrusjl coverage codecov coveralls
+    - cirrusjl coverage codecov
