--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["Qi Zhang <singularitti@outlook.com>"]
 version = "0.10.0"
 
 [deps]
-CommandComposer = "b5b47461-4a42-4db3-bdf2-684fadd57bc3"
+ComposableCommands = "b5b47461-4a42-4db3-bdf2-684fadd57bc3"
 Configurations = "5218b696-f38b-4ac9-8b61-a12ec717816d"
 IsURL = "ceb4388c-583f-448d-bb30-00b11e8c5682"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
